--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Nanaayaangg</title>
     <script src="vara.min.js" type="text/javascript"></script>
     <style>
         /*
